fix: label shift on textarea focus

--- a/src/index.css
+++ b/src/index.css
@@ -74,7 +74,8 @@
 }
 
 .input__group label.active,
-.input__group input:focus + label {
+.input__group input:focus + label,
+.input__group textarea:focus + label {
   top: -1.5rem;
   font-size: 0.875rem;
   left: 0.5rem;
